--- a/Registry/registry/templates/login.jinja2
+++ b/Registry/registry/templates/login.jinja2
@@ -14,7 +14,7 @@
 <div class="login">
   <h1>Войти в личный кабинет</h1>
   <form method="post" action="login">
-	<p><input type="text" name="login" value="" placeholder="Логин"></p>
+	<p><input type="text" name="login" value="" placeholder="Номер полиса"></p>
 	<p><input type="password" name="password" value="" placeholder="Пароль"></p>
 	<p class="submit"><input type="submit" name="commit" value="Войти"></p>
   </form>
